--- a/config/default.config
+++ b/config/default.config
@@ -2,14 +2,13 @@ server {
     listen 8002;
 	server_name localhost;
     host 127.0.0.1;
-    root docs/fusion_web/;
+    root /Users/anapaulaperezgavilan/Documents/42/WebServAP;
     client_max_body_size 3000000;
 	index index.html;
-    error_page 404 error_pages/404.html;
+    error_page 404 /error_pages/404.html;
 
     location / {
         allow_methods  DELETE POST GET;
         autoindex off;
     }
-
 }
