--- a/config/default.config
+++ b/config/default.config
@@ -4,7 +4,7 @@ server {
     host 127.0.0.1;
     root /Users/anapaulaperezgavilan/Documents/42/WebServAP;
     client_max_body_size 3000000;
-	index index.html;
+	index /index/index.html;
     error_page 404 /error_pages/404.html;
 
     location / {
