--- a/config/default.config
+++ b/config/default.config
@@ -1,10 +1,25 @@
 server {
     listen 8002;
-	server_name localhost;
+    server_name localhost;
     host 127.0.0.1;
     root /Users/anapaulaperezgavilan/Documents/42/WebServAP;
     client_max_body_size 3000000;
-	index /index/index.html;
+    index /index/index.html;
+    error_page 404 /error_pages/404.html;
+
+    location / {
+        allow_methods  DELETE POST GET;
+        autoindex off;
+    }
+}
+
+server {
+    listen 8003;
+    server_name localhost1;
+    host 127.0.0.1;            # ← changed from 127.0.0.2 to 127.0.0.1
+    root /Users/anapaulaperezgavilan/Documents/42/WebServAP;
+    client_max_body_size 3000000;
+    index /index/index.html;
     error_page 404 /error_pages/404.html;
 
     location / {
