--- a/config/default.config
+++ b/config/default.config
@@ -16,7 +16,7 @@ server {
 server {
     listen 8003;
     server_name localhost1;
-    host 127.0.0.1;            # ← changed from 127.0.0.2 to 127.0.0.1
+    host 127.0.0.1;
     root /Users/anapaulaperezgavilan/Documents/42/WebServAP;
     client_max_body_size 3000000;
     index /index/index.html;
