--- a/config/default.config
+++ b/config/default.config
@@ -2,7 +2,7 @@ server {
     listen 8002;
     server_name localhost;
     host 127.0.0.1;
-    root PWD/webserv;
+    root ;
     client_max_body_size 3000000;
     index /index/index.html;
     error_page 404 /error_pages/404.html;
@@ -17,7 +17,7 @@ server {
     listen 8003;
     server_name localhost1;
     host 127.0.0.1;
-    root PWD/webserv;
+    root ;
     client_max_body_size 3000000;
     index /index/index.html;
     error_page 404 /error_pages/404.html;
