location rename + configfile bool functions + www everywhere

--- a/config/default.config
+++ b/config/default.config
@@ -4,8 +4,8 @@ server {
     host 127.0.0.1;
     root ;
     client_max_body_size 3000000;
-    index /index/index.html;
-    error_page 404 /error_pages/404.html;
+    index /www/index/index.html;
+    error_page 404 /www/error_pages/404.html;
 
     location / {
         allow_methods  DELETE POST GET;
@@ -19,8 +19,8 @@ server {
     host 127.0.0.1;
     root ;
     client_max_body_size 3000000;
-    index /index/index.html;
-    error_page 404 /error_pages/404.html;
+    index /www/index/index.html;
+    error_page 404 /www/error_pages/404.html;
 
     location / {
         allow_methods  DELETE POST GET;
