--- a/config/default.config
+++ b/config/default.config
@@ -2,10 +2,11 @@ server {
     listen 8002;
     server_name localhost;
     host 127.0.0.1;
-    root ;
+    root www;
     client_max_body_size 3000000;
-    index /www/index/index.html;
-    error_page 404 /www/error_pages/404.html;
+    index /index.html;
+    error_page 404 /error_pages/404.html;
+     
 
     location / {
         allow_methods  DELETE POST GET;
@@ -17,10 +18,10 @@ server {
     listen 8003;
     server_name localhost1;
     host 127.0.0.1;
-    root ;
+    root www;
     client_max_body_size 3000000;
-    index /www/index/index.html;
-    error_page 404 /www/error_pages/404.html;
+    index /index/index.html;
+    error_page 404 /error_pages/404.html;
 
     location / {
         allow_methods  DELETE POST GET;
