feat: path aliases
- new error ERR_ROOT_ALIAS: no puede haber root y alias en el mismo location
- fix: condicion de match de locations
- TOKEN_ERR messages with more info
- fix: no setear el root de location con el de server. dejarlo vacio
- ejemplos de contact.html con alias y root en default config (+ web updated)

--- a/config/default.config
+++ b/config/default.config
@@ -6,11 +6,13 @@ server {
     client_max_body_size 3000000;
     index /index.html;
     error_page 404 /error_pages/404.html;
-     
 
-    location / {
-        allow_methods  DELETE POST GET;
-        autoindex off;
+    location /contact.html {
+        alias /contactalias/contact.html;
+    }
+
+    location /webinfo {
+        alias /webdev;
     }
 }
 
@@ -23,8 +25,11 @@ server {
     index /index/index.html;
     error_page 404 /error_pages/404.html;
 
-    location / {
-        allow_methods  DELETE POST GET;
-        autoindex off;
+    location /contact.html {
+        root www/contactroot;
+    }
+
+    location /webdevelopment {
+        alias /webdev;
     }
 }
