feat: index WIP.
- todo: some-dir shouldl be redirected to some-dir/. do it when cheking locations

--- a/config/default.config
+++ b/config/default.config
@@ -4,7 +4,7 @@ server {
     host 127.0.0.1;
     root www;
     client_max_body_size 3000000;
-    index /index.html;
+    index index.html;
     error_page 404 /error_pages/404.html;
 
     location /contact.html {
@@ -14,6 +14,10 @@ server {
     location /webinfo {
         alias /webdev;
     }
+
+    location /webdev {
+        index info.html;
+    }
 }
 
 server {
@@ -22,7 +26,7 @@ server {
     host 127.0.0.1;
     root www;
     client_max_body_size 3000000;
-    index /index/index.html;
+    index index/index.html;
     error_page 404 /error_pages/404.html;
 
     location /contact.html {
