--- a/config/default.config
+++ b/config/default.config
@@ -8,11 +8,11 @@ server {
     error_page 404 /error_pages/404.html;
 
     location /contact.html {
-        alias /contactalias/contact.html;
+        alias www/contactalias/contact.html;
     }
 
     location /webinfo {
-        alias /webdev;
+        alias www/webdev;
     }
 
     location /webdev {
