--- a/config/default.config
+++ b/config/default.config
@@ -18,6 +18,9 @@ server {
     location /webdev {
         index info.html;
     }
+    location /webdev/imgs {
+        autoindex on;
+    }
 }
 
 server {
