--- a/config/default.config
+++ b/config/default.config
@@ -21,6 +21,10 @@ server {
     location /webdev/imgs {
         autoindex on;
     }
+
+    location /the-b2b-imgs {
+        return /webdev;
+    }
 }
 
 server {
