--- a/config/default.config
+++ b/config/default.config
@@ -1,4 +1,34 @@
 server {
+    listen 8001;
+    server_name localhost;
+    host 127.0.0.1;
+    root www;
+    client_max_body_size 3000000;
+    index index.html;
+    error_page 404 /error_pages/404.html;
+
+    location / {
+        methods GET;
+    }
+
+    location /put_test/* {
+        methods POST;
+    }
+
+    location /post_body {
+        methods POST;
+        client_max_body_size 100;
+    }
+    location /directory/ {
+        methods GET;
+        alias YoupiBanane;
+        index youpi.bad_extension;
+    }
+
+    
+}
+
+server {
     listen 8002;
     server_name localhost;
     host 127.0.0.1;
