refactor: rename class Server -> ServerUnit

--- a/config/default.config
+++ b/config/default.config
@@ -11,8 +11,8 @@ server {
         methods GET;
     }
 
-    location /put_test/* {
-        methods POST;
+    location /put_test/ {
+        methods POST PUT;
     }
 
     location /post_body {
@@ -20,7 +20,7 @@ server {
         client_max_body_size 100;
     }
     location /directory/ {
-        methods GET;
+        methods GET POST;
         alias YoupiBanane;
         index youpi.bad_extension;
     }
