--- a/config/default.config
+++ b/config/default.config
@@ -9,6 +9,7 @@ server {
 
     location / {
         methods GET;
+        cgi .bla ./cgi_tester;
     }
 
     location /put_test/ {
@@ -21,6 +22,7 @@ server {
     }
     location /directory/ {
         methods GET POST;
+        cgi .bla ./cgi_tester;
         alias YoupiBanane;
         index youpi.bad_extension;
     }
